# NameGenerator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
RandomWordGenerator/: CMakeLists.txt  Doxyfile.in  Factory.cpp  Generator.cpp  README.md
RandomWordGenerator/cmake/: RandomWordGeneratorConfig.cmake.in
RandomWordGenerator/include/RandomWordGenerator/: Factory.h  Generator.h
RandomWordGenerator/test/: CMakeLists.txt  test_analysis.cpp  test_edge_cases.cpp  test_generation.cpp  test_generator.cpp  test_serialization.cpp  test_state.cpp
apps/: README.md
apps/generate_names/: CMakeLists.txt  main.cpp
apps/generate_words/: CMakeLists.txt  main.cpp
